[gd_scene load_steps=9 format=3 uid="uid://ccomo7mnb7ppg"]

[ext_resource type="Script" uid="uid://dmejcchdvdbh3" path="res://hud/scripts/inventory_ui.gd" id="1_dclje"]
[ext_resource type="FontFile" uid="uid://b2vwkisoh57if" path="res://assets/Fonts/NeoDunggeunmoPro-Regular.ttf" id="2_woesh"]
[ext_resource type="PackedScene" uid="uid://bres6jib3lgt7" path="res://hud/scenes/picked_card.tscn" id="3_76qqu"]
[ext_resource type="Shader" uid="uid://ccpbd7l2lsqqu" path="res://hud/shaders/highlight.gdshader" id="4_hdbsw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hdbsw"]
resource_local_to_scene = true
shader = ExtResource("4_hdbsw")
shader_parameter/outline_width = 1.0
shader_parameter/outline_color = Vector4(1, 1, 1, 1)
shader_parameter/outline_enabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uoyh8"]
resource_local_to_scene = true
shader = ExtResource("4_hdbsw")
shader_parameter/outline_width = 1.0
shader_parameter/outline_color = Vector4(1, 1, 1, 1)
shader_parameter/outline_enabled = false

[sub_resource type="InputEventKey" id="InputEventKey_76qqu"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_hdbsw"]
events = [SubResource("InputEventKey_76qqu")]

[node name="InventoryUI" type="Control"]
process_mode = 3
z_index = 50
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dclje")

[node name="Background" type="ColorRect" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.132873, 0.222935, 0.265287, 0.823529)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
z_index = 50
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 59.0
offset_right = 60.0
offset_bottom = -13.0
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 7

[node name="Card_text" type="Label" parent="."]
z_index = 26
texture_filter = 1
layout_mode = 1
offset_left = 20.0
offset_top = 15.0
offset_right = 130.0
offset_bottom = 47.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_woesh")
theme_override_font_sizes/font_size = 32
text = "CARD : 0"

[node name="FusioGround" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -581.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="FusioBackGround" type="ColorRect" parent="FusioGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.215686)

[node name="MarginContainer" type="MarginContainer" parent="FusioGround"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="FusioGround/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PickedCard1" parent="FusioGround/MarginContainer/HBoxContainer" instance=ExtResource("3_76qqu")]
material = SubResource("ShaderMaterial_hdbsw")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="FusioGround/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100

[node name="PickedCard2" parent="FusioGround/MarginContainer/HBoxContainer" instance=ExtResource("3_76qqu")]
material = SubResource("ShaderMaterial_uoyh8")
layout_mode = 2

[node name="FusioButton" type="Button" parent="FusioGround"]
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = 162.0
offset_right = 27.5
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_woesh")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_hdbsw")
text = "FUSIO"
flat = true

[node name="Out_Button" type="Button" parent="."]
z_index = 30
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_woesh")
theme_override_font_sizes/font_size = 32
text = "X"
